--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -8,28 +8,31 @@
             <div class="masonry-block">
               <div class="block block-image v1">
                 <div class="block-image">
-                  <div class="view view-first">
-                    <%= attachment_image_tag post_image, :image %>
-                  </div>
-                </div>
+                
+                    <!--  -->
+                
+                
                 <div class="block-content">
                   <%= image_tag('sample-author1.jpg', class: "img-circle pull-left profile-thumb") %>
+                
                   <h3 class="block-title">
+                      <div class="view view-first">
          <%= link_to post_image_path(post_image.id) do %>
                      <!-- <i class="fa fa-map-marker"></i><%= post_image.shop_name %> -->
              <%= attachment_image_tag post_image, :image %>
-         <% end %>
+       <% end %></div>
                   </h3>
                   <p><%= post_image.caption %></p>
-                  <ul class="inline-meta">
-                    <li>By
-                      <%= post_image.user.name %>
-                    </li>
-                    <li>
-                    <a href="#">23 コメント</a>
-                    </li>
-                  </ul>
+                 <ul class="inline-meta">
+  <li>By
+    <%= post_image.user.name %>
+  </li>
+  <li>
+    <%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id) %>
+  </li>
+</ul>
                 </div>
+
               </div>
             </div>
           <% end %>
@@ -38,3 +41,4 @@
     </div>
   </div>
 </section>
+<%= paginate @post_images, class: "paginate" %>
