--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,9 @@
 <div class="profile-container">
     <h3 class="profile-name"><%= @user.name %></h3>
-    <%= image_tag('sample-author1.jpg', class: "img-circle pull-left profile-thumb", style: "width: 100px; height: 100px; margin-top: 20px;") %>
+     <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
+    <% if @user.id == current_user.id %>
+        <p><%= link_to "プロフィール編集", edit_user_path(@user), class: "pull-right" %></p>
+    <% end %>
 </div>
 
 <section class="sct-color-1 slice">
@@ -9,23 +12,22 @@
       <div class="col-md-8 col-sm-offset-2">
         <div class="masonry-wrapper-cols">
           <div class="masonry-gutter"></div>
-         <% @post_images.each do |post_image| %>
+          <% @post_images.each do |post_image| %>
             <div class="masonry-block">
               <div class="block block-image v1">
                 <div class="block-image">
-                
-                    <!--  -->
-                
-                
+                  <div class="view view-first">
+                    <%= link_to post_image_path(post_image.id) do %>
+                      <%= attachment_image_tag post_image, :image %>
+                    <% end %>
+                  </div>
+                </div>
                 <div class="block-content">
-                  <%= image_tag('sample-author1.jpg', class: "img-circle pull-left profile-thumb") %>
-                
+                  <%= attachment_image_tag post_image.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class: "img-circle pull-left profile-thumb" %>
                   <h3 class="block-title">
-                      <div class="view view-first">
-         <%= link_to post_image_path(post_image.id) do %>
-                     <!-- <i class="fa fa-map-marker"></i><%= post_image.shop_name %> -->
-             <%= attachment_image_tag post_image, :image %>
-       <% end %></div>
+                    <%= link_to post_image_path(post_image.id) do %>
+                      <i class="fa fa-map-marker"></i><%= post_image.shop_name %>
+                    <% end %>
                   </h3>
                   <p><%= post_image.caption %></p>
                  <ul class="inline-meta">
